etc/tests/error/parser/use-dot-stops.ny
;; expect: use expects module identifier or string path
use .

fn main(){ 0 }
main()
